--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -3711,7 +3711,7 @@ fieldset:disabled .btn {
   --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #8f93a9;
   --bs-btn-hover-border-color: #888da4;
-  --bs-btn-focus-shadow-rgb: 105, 109, 131;
+  /* --bs-btn-focus-shadow-rgb: 105, 109, 131; */
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #9599ae;
   --bs-btn-active-border-color: #888da4;
